package com.example.ez.domain;

public class MateriaXComision {


}
