@startuml

rectangle Domain{
    annotation GestorInscripcion <<control>>{
        - inscripcionesReg: int[]
        - inscripcionesApDi: int[]
        - materias: Materia[]
        - materiaCursables: int[]
        --
        ==Core==
        + listarMaterias()
        + listarInscripcines()
        + <b>registrarInscripcion()
        + <b>simularCorrelativas()
        + <b>simularHorarios()
        ==Info==
        + resumenCursada()
        + infoCarrera()
        + infoMateria()
        ==Auxiliar==
        + buscarInscripcionesRegApDi()
        + buscarMaterias()
        + filtrarMateriasDisponibles()
    }

    annotation PantallaInscripcion <<boundary>>{
        - vistaMenuPrincipal
        ==Core==
        - vistaListarMaterias
        - vistaListaInscripciones
        - vistaCrearEditarInscripcion
        - vistaSimularHorarios
        ==Info==
        - vistaResumenCursada
        - vistaInfoCarrera
        - vistaInfoMateria
    }

    class Config {
        - nombreAlumno
        - añoIngreso
    }

    class Carrera {
        - nombre
        - descripcion
    }

    class Inscripcion{
        - fecha
        --
        + esOrdenMateria()
    }

    class MateriaXComision{
        - horarios: boolean[][]
        --
        + esOrdenMateria()
    }

    class Materia {
        - numero_orden: int
        - nombre: String
        - descripcion: String
        - modalidad: String
        - sigla: String
        - correlativas_reg: int[]
        - correlativas_ap: int[]
        --
        + esOrdenMateria()
        + esCursable(corReg, corApDi)
    }


    class Comision{
        - nombre
    }


    enum Nota{
        * 0 - 10
    }

    enum Condicion{
        * Inscripto
        * Aprobado
        * Regular
        * NoCursado
    }

    enum TipoMateria{
        * Principal
        * Electiva
    }

    enum Especialidad{
        * Civil
        * Electrica
        * Electronica
        * Industrial
        * Mecanica
        * Metalurgica
        * Quimica
        * Sistemas
        * Basica
    }

    enum Turno {
        * Mañaña
        * Tarde
        * Noche
    }

    enum Modalidad {
        * Anual
        * 1C
        * 2C
        * Intensivo
    }

    enum Nivel{
        * 1 - 5
    }

    GestorInscripcion --> Config

    GestorInscripcion <.> PantallaInscripcion

    Carrera *--> Materia
    'Carrera --> Especialidad

    Materia --> Especialidad
    Materia --> Nivel
    Materia --> TipoMateria

    Inscripcion --> Comision
    Inscripcion --> Condicion
    Inscripcion --> Nota
    Inscripcion --> Materia

    MateriaXComision --> Materia
    MateriaXComision --> Comision
    MateriaXComision --> Modalidad

    Comision --> Turno
    Comision --> Especialidad
    Comision --> Nivel
}

@enduml

